--- a/frontend/app/views/fragments/event/itemSummary.scala.html
+++ b/frontend/app/views/fragments/event/itemSummary.scala.html
@@ -20,7 +20,7 @@
 
         <div class="event-item__time">
             <i class="icon-sprite icon-sprite-early_booking-grey"></i>
-            @event.start.pretty
+            <time datetime="@event.start">@prettyDateWithTimeAndDayName(event.start)</time>
         </div>
 
         <div class="event-item__location">
