--- a/frontend/app/views/joiner/thankyou/friend.scala.html
+++ b/frontend/app/views/joiner/thankyou/friend.scala.html
@@ -1,9 +1,33 @@
-@(ebIFrameDetail: Option[(String, Int)], userFields: model.PrivateFields, userEmail: String, event: Option[model.Eventbrite.EBEvent])
+@(subscriptionDetails: model.Zuora.SubscriptionDetails, ebIFrameDetail: Option[(String, Int)], userFields: model.PrivateFields, userEmail: String, event: Option[model.Eventbrite.EBEvent])
+
+@import views.support.Dates._
 
 @main("Thankyou | Friend", containerPadding = false) {
 
     <section class="content__container content__container--slim">
         @fragments.layout.welcomeUser(userFields, userEmail)
+    </section>
+
+    <section class="content__container content__container--slim">
+        <h2 class="content__headline">Your membership summary</h2>
+        <table class="table table--responsive-font table--striped" role="grid">
+            <tr role="row">
+                <th role="rowheader">
+                    Tier
+                </th>
+                <td>
+                    @subscriptionDetails.planName
+                </td>
+            </tr>
+            <tr role="row">
+                <th role="rowheader">
+                    Start Date
+                </th>
+                <td>
+                    @subscriptionDetails.startDate.pretty
+                </td>
+            </tr>
+        </table>
     </section>
 
     @fragments.joiner.completePurchase(ebIFrameDetail, event)
