Tweak to styles

--- a/frontend/app/views/joiner/thankyou/friend.scala.html
+++ b/frontend/app/views/joiner/thankyou/friend.scala.html
@@ -21,7 +21,7 @@
             </tr>
             <tr role="row">
                 <th role="rowheader">
-                    Start Date
+                    Start date
                 </th>
                 <td>
                     @subscriptionDetails.startDate.pretty
