--- a/frontend/app/views/joiner/thankyou/paid.scala.html
+++ b/frontend/app/views/joiner/thankyou/paid.scala.html
@@ -22,7 +22,7 @@
             </tr>
             <tr role="row">
                 <th role="rowheader">
-                    Start Date
+                    Start date
                 </th>
                 <td>
                     @subscriptionDetails.startDate.pretty
@@ -30,7 +30,7 @@
             </tr>
             <tr role="row">
                 <th role="rowheader">
-                    Amount Paid Today
+                    Amount paid today
                 </th>
                 <td>
                     @subscriptionDetails.planAmount.pretty
@@ -38,7 +38,7 @@
             </tr>
             <tr role="row">
                 <th role="rowheader">
-                    @if(subscriptionDetails.annual){ Annual } else { Monthly } Payment
+                    @if(subscriptionDetails.annual){ Annual } else { Monthly } payment
                 </th>
                 <td>
                     @subscriptionDetails.planAmount.pretty
@@ -46,7 +46,7 @@
             </tr>
             <tr role="row">
                 <th role="rowheader">
-                    Next Payment
+                    Next payment
                 </th>
                 <td>
                    @subscriptionDetails.endDate.pretty
