--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -477,6 +477,17 @@ div.event {
         margin-bottom: rem($gs-baseline * 2);
     }
 
+    .event-status--sold-out {
+        display: inline-block;
+        color: $white;
+        background-color: $mem-live-accent;
+        @include fs-data(2);
+        position: relative;
+        top: rem(-3px);
+        padding: rem(1px) rem(3px);
+        margin-right: rem(4px);
+    }
+
     .event-item__meta {
         @include f-data;
         @include font-size(rem(14px), rem(22px));
