--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -241,6 +241,8 @@ $mem-live-red: transparentize(#b51800, .15);
 
 $mem-live-accent: #cc2b12;
 
+$mem-live-accent-trans: rgba(204, 43, 18, .95);
+
 $mem-live-red-trans: rgba(180, 24, 0, .95);
 
 $side-margins-top-magic-number: 114px;
