Add Facebook conversion pixel

--- a/frontend/app/views/joiner/thankyou/paid.scala.html
+++ b/frontend/app/views/joiner/thankyou/paid.scala.html
@@ -68,4 +68,5 @@
     @fragments.joiner.completePurchase(ebIFrameDetail)
 
     @fragments.analytics.googleJoinerConversion(tier)
+    @fragments.analytics.facebookJoinerConversion(tier)
 }
