--- a/frontend/app/views/joiner/thankyou/friend.scala.html
+++ b/frontend/app/views/joiner/thankyou/friend.scala.html
@@ -11,4 +11,5 @@
     @fragments.joiner.completePurchase(ebIFrameDetail)
 
     @fragments.analytics.googleJoinerConversion()
+    @fragments.analytics.facebookJoinerConversion()
 }
