padding for eventbrit icon

--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -520,6 +520,10 @@ div.event {
         width: rem(25px);
     }
 
+    .icon-sprite-evenbrite {
+        margin-top: rem(8px);
+    }
+
     .icon-sprite-early_booking-grey {
         margin-top: rem(-2px);
     }
