this class is not being used

--- a/frontend/app/views/fragments/event/item.scala.html
+++ b/frontend/app/views/fragments/event/item.scala.html
@@ -28,7 +28,7 @@
                             <span class="event-item__location-name">@event.venue.name, </span>
                         }
                         @for(address <- event.venue.address) {
-                            <span class="event-item__location-address">@address.city, @address.postal_code</span>
+                            <span>@address.city, @address.postal_code</span>
                         }
                     </div>
 
