--- a/frontend/app/views/fragments/form/cardDetail.scala.html
+++ b/frontend/app/views/fragments/form/cardDetail.scala.html
@@ -69,7 +69,7 @@
                    maxlength="4"
                    autocomplete="off"
                    data-validation="creditCardCVC"/>
-            <a class="cvc-cta js-cvc-cta" href="#">Whats this?</a>
+            <a class="cvc-cta js-cvc-cta" href="#">What's this?</a>
             <div class="cvc u-h u-cf js-cvc-image-container">
                 <div class="u-cf">
                     <div class="cvc__primary">
@@ -78,7 +78,7 @@
                     <div class="cvc__secondary">
                         <h3 class="cvc__heading">Visa, Mastercard</h3>
                         <p class="cvc__body">
-                        The last 3 digits printed on the back within the signiture strip
+                        The last 3 digits printed on the back within the signature strip
                         </p>
                     </div>
                 </div>
